Fix layout on firefox.
Masonry was not working correctly on ff. To fix this, I have updated
masonry and I have used the class "grid-sizer" in a different way. see
comments in index.html

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -171,12 +171,12 @@
   margin: 0 2% 0 2%;
 }
 .grid, .grid-sizer{
-  width: 32%;
+  width: 32.666%;
   margin: 0 0 1% 0;
 }
 
 .grid.l2 {
-  width: 66%;
+  width: 66.333%;
 }
 
 .grid.l3 {
